--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -90,7 +90,12 @@
                 {% for p in post_list %}
                 <!-- Blog Post -->
                 <div class="card mb-4">
+                    {% if p.head_image %}
                     <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p.title }}">
+                    {% else %}
+                    <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/750/300" alt="{{ p.title }}">
+                    {% endif %}
+
                     <div class="card-body">
                         <h2 class="card-title">{{ p.title}}</h2>
                         <p class="card-text">{{ p.content }}</p>
