첨부 파일 있을 경우 포스트 상세 페이지에 다운로드 버튼 출력하기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -16,6 +16,9 @@
 
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/98856466d2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -66,6 +69,18 @@
                     {% endif %}
                     <!-- Post content-->
                     <p>{{ post.content }}</p>
+
+                    {% if post.file_upload %}
+                    <a href="post.file_upload.url" type="button" class="btn btn-outline-dark" role="button"
+                        download>Download:
+                        {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+                        <i class="far fa-file-excel"></i>
+                        {% else %}
+                        <i class="far fa-file-alt"></i>
+                        {% endif %}
+                        {{ post.get_file_name }}
+                    </a>
+                    {% endif %}
                     <hr>
                 </article>
                 <!-- Comments section-->
