미리보기와 요약문 추가하기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -50,6 +50,10 @@
                         <!-- Post title-->
                         <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
 
+                        {% if post.hook_text %}
+                        <h5 class="text-muted">{{ post.hook_text }}</h5>
+                        {% endif %}
+
                         <!-- Post meta content-->
                         <div class="text-muted fst-italic mb-2">{{ post.created_at }}</div>
 
