--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -84,9 +84,10 @@
 
     <div class="container my-3">
         <div class="row">
-            <div class="col-md-8 col-lg-9">
+            <div class="col-md-8 col-lg-9" id="main-area">
                 <h1>Blog</h1>
 
+                {% if post_list.exists %}
                 {% for p in post_list %}
                 <!-- Blog Post -->
                 <div class="card mb-4">
@@ -111,6 +112,9 @@
                     </div>
                 </div>
                 {% endfor %}
+                {% else %}
+                <h1>아직 게시물이 없습니다.</h1>
+                {% endif %}
 
 
                 <!-- Pagination -->
