포스트 목록, 상세 페이지에서 작성자 정보 출력하기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,6 +17,10 @@
             <h5 class="text-muted">{{ post.hook_text }}</h5>
             {% endif %}
 
+            <!-- Author -->
+            <p class="lead">
+                by <a href="#">{{ post.author | upper }}</a>
+            </p>
             <!-- Post meta content-->
             <div class="text-muted fst-italic mb-2">{{ post.created_at }}</div>
 
