포스트 목록 페이지와 포스트 상세 페이지에 태그 기능 추가하기

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,7 +2,14 @@
 
 {% block main_area %}
 <div class="col-md-8 col-lg-9" id="main-area">
-    <h1>Blog</h1>
+    <h1>
+        Blog
+        {% if category %}
+        <span class="badge badge-secondary">
+            {{ category }}
+        </span>
+        {% endif %}
+    </h1>
 
     {% if post_list.exists %}
     {% for p in post_list %}
@@ -26,6 +33,20 @@
             <h5 class="text-muted">{{ p.hook_text }}</h5>
             {% endif %}
             <p class="card-text">{{ p.content | truncatewords:45 }}</p>
+
+            {% if p.tags.exists %}
+            <i class="fas fa-tags"></i>
+            {% for tag in p.tags.all %}
+            <a href="{{ tag.get_absolute_url }}">
+                <span class="badge badge-pill badge-light">
+                    {{ tag }}
+                </span>
+            </a>
+            {% endfor %}
+            <br />
+            <br />
+            {% endif %}
+
             <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
         </div>
         <div class="card-footer text-muted">
