--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,6 +10,11 @@
     <article>
         <!-- Post header-->
         <header class="mb-4">
+            {% if post.category %}
+            <span class="badge badge-secondary float-right">{{ post.category }}</span>
+            {% else %}
+            <span class="badge badge-secondary float-right">미분류</span>
+            {% endif %}
             <!-- Post title-->
             <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
 
@@ -40,6 +45,19 @@
         {% endif %}
         <!-- Post content-->
         <p>{{ post.content }}</p>
+
+        {% if post.tags.exists %}
+        <i class="fas fa-tags"></i>
+        {% for tag in post.tags.all %}
+        <a href="{{ tag.get_absolute_url }}">
+            <span class="badge badge-pill badge-light">
+                {{ tag }}
+            </span>
+        </a>
+        {% endfor %}
+        <br />
+        <br />
+        {% endif %}
 
         {% if post.file_upload %}
         <a href="post.file_upload.url" type="button" class="btn btn-outline-dark" role="button" download>Download:
