태그 페이지 만들기

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,6 +9,12 @@
             {{ category }}
         </span>
         {% endif %}
+
+        {% if tag %}
+        <span class="badge badge-light"><i class="fas fa-tags"></i>
+            ({{ tag.post_set.count }})
+        </span>
+        {% endif %}
     </h1>
 
     {% if post_list.exists %}
