--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -26,6 +26,14 @@
             <p class="lead">
                 by <a href="#">{{ post.author | upper }}</a>
             </p>
+
+            <hr />
+
+            {% if user.is_authenticated and user == post.author %}
+            <a href="/blog/update_post/{{ post.pk }}/" class="btn btn-info btn-sm float-right" role="button">
+                <i class="fas fa-pen">&nbsp;&nbsp; Edit Post</i>
+            </a>
+            {% endif %}
             <!-- Post meta content-->
             <div class="text-muted fst-italic mb-2">{{ post.created_at }}</div>
 
