--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,12 @@
 {% extends 'blog/base.html' %}
 
 {% block main_area %}
+
+{% if user.is_authenticated %}
+<a href="/blog/create_post/" class="btn btn-info btn-sm float-right" role="button">
+    <i class="fas fa-pen">&nbsp;&nbsp;New Post</i>
+</a>
+{% endif %}
 <div class="col-md-8 col-lg-9" id="main-area">
     <h1>
         Blog
