포스트를 작성할 때 텍스트로 태그 지정하기

--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -13,6 +13,14 @@ Create Post - Blog
     {% csrf_token %}
     <div>
         {{ form }}
+        <tr>
+            <th>
+                <label for="id_tagsstr">Tags:</label>
+            </th>
+            <td>
+                <input type="text" name="tags_str" id="id_tags_str" />
+            </td>
+        </tr>
     </div>
     <button type="submit" class="btn btn-primary float-right">Submit</button>
 </form>
